<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context="com.geekluxun.www.happygrowth.food.fooddetail.FoodDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/left_right_margin"
        android:layout_marginRight="@dimen/left_right_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_food"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_food_milk"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/text_size_normal"/>

        <TextView
            android:id="@+id/tv_milk_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0mL"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/text_size_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_food_water"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/text_size_normal"/>

        <TextView
            android:id="@+id/tv_water_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0mL"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_normal"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/left_right_margin"
        android:layout_marginRight="@dimen/left_right_margin"
        android:layout_marginTop="20dp">

        <!--<Spinner-->
            <!--android:id="@+id/sp_food_time"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1">-->
        <!--</Spinner>-->

        <TextView
            android:id="@+id/tv_food_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/food_date"
            android:layout_weight="2"
            android:textSize="@dimen/text_size_normal"/>


        <Spinner
            android:id="@+id/sp_food_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:entries="@array/food_amount_range"
            android:textSize="@dimen/text_size_normal">
        </Spinner>

        <Spinner
            android:id="@+id/sp_food_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/food_type"
            android:textSize="@dimen/text_size_normal">
        </Spinner>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_food_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/colorPrimary"
        android:dividerHeight="2dp"
        android:layout_marginRight="@dimen/left_right_margin"
        android:layout_marginLeft="@dimen/left_right_margin"
        >
    </ListView>
</LinearLayout>
